Fix for wrapText in IE

--- a/src/components/list_group/_list_group_item.scss
+++ b/src/components/list_group/_list_group_item.scss
@@ -99,7 +99,7 @@
   }
 
   .euiListGroupItem__label {
-    white-space: initial;
+    white-space: inherit;
   }
 }
 
